# orchidv4-kernel

./: Cargo.toml  README.md
src/: lib.rs
src/block_tree/: block_tree_control.rs  block_tree_diff.rs  block_tree_error.rs  mod.rs
src/block_tree/block/: block_request.rs  block_serialization.rs  mod.rs
src/block_tree/block/block_binding/: block_binding_control.rs  mod.rs
src/block_tree/block/block_generator/: block_generator_control.rs  mod.rs
src/block_tree/block/bottom/: mod.rs
src/block_tree/block/top/: mod.rs
src/curator/: curator_control.rs  curator_control_port.rs  mod.rs  tests.rs
src/feature_tree/: feature_tree_control.rs  feature_tree_diff.rs  feature_tree_error.rs  mod.rs
src/feature_tree/compact_feature/: mod.rs
src/feature_tree/feature/: feature_control.rs  feature_request.rs  feature_serialization.rs  mod.rs
src/feature_tree/feature/feature_generator/: feature_generator_control.rs  (+1 more)
src/feature_tree/feature_binding/: feature_binding_control.rs  mod.rs
src/feature_tree/feature_socket/: mod.rs  socket_control.rs
src/feature_tree/feature_type/: built_in_types.rs  mod.rs
src/feature_tree/feature_utils/: mod.rs
src/kernel_io/: mod.rs
src/kernel_io/websocket_server/: mod.rs  websocket_command_parser_port.rs
src/kernel_io/ws_io/: mod.rs
src/page/: mod.rs  page_control.rs  page_control_port.rs  page_error.rs  page_serialization.rs  tests.rs
src/page/feature_tree/: feature_tree_control_port.rs  feature_tree_error.rs  mod.rs  tests.rs
src/page/lexicon/: mod.rs
src/page/page_generator/: mod.rs  page_generator_control.rs  page_generator_port.rs
src/page/scoped_entity/: mod.rs
src/page/term_tree/: mod.rs  term_tree_control_port.rs
src/utils/: mod.rs  type_utils.rs
src/utils/id_generator/: mod.rs
(+71 files in other folders)
