[package]
name = "orchidv4-kernel"
version = "0.1.0"
authors = ["Danny Geisz <dannygeisz@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ws_io"
path = "src/bin/ws_kernel_io.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[dependencies]
uuid = { version = "0.8.2", features = ["v4"]}
tokio = { version = "1", features = ["full" ]}
tokio-tungstenite = "*"
log = "0.4"
env_logger = "0.8.4"
futures-util = "0.3.15"
mockall = "0.10.1"
url = "2.2.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"